--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -18,5 +18,6 @@ android {
     compileSdkVersion 25
 }
 dependencies {
-
+    implementation project(':openCVLibrary320')
+    implementation project(':DogeCV')
 }
